fix gap right on mobile

--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ h5 {
 
 main {
     margin: 0 auto;
-    max-width: 600px;
     padding: 0px 0px ;
     text-align: justify;
     font-family: 'Nunito', sans-serif;
@@ -101,7 +100,6 @@ article>img {
     height: auto;
     max-width: 100%;
     max-height: 100%;
-
     margin: 0 auto;
     }
 
